Modified mobile view for login/register

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,23 +6,18 @@ html
     link(rel='stylesheet', href='/stylesheets/literia.css')
     //link(href='/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     script(src="https://kit.fontawesome.com/ef21edb9eb.js", crossorigin="anonymous")
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     block extraHeader
   body
     nav#mainNav.navbar.navbar-expand-sm.bg-light.navbar-light.justify-content-end.fixed-top
-      a.mr-auto.mr-1.navbar-brand.js-scroll-trigger(href='/dashboard') Inhalert
-      if user
-        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent')
-          span.navbar-toggler-icon
-        #navbarSupportedContent.collapse.navbar-collapse.flex-grow-0
-          ul.navbar-nav.text-right
-            li.nav-item.active
-              a.nav-link(href='/about') About
-            li.nav-item.active
-              a.nav-link(href='/users/account') Account
-            li.nav-item.active
-              a.nav-link(href='/users/preferences') Preferences
-            li.nav-item.active
-              a.nav-link(href='/users/logout') Logout
+      a.mr-auto.mr-1.navbar-brand.js-scroll-trigger(href='#page-top') Inhalert
+      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent')
+        span.navbar-toggler-icon
+      #navbarSupportedContent.collapse.navbar-collapse.flex-grow-0
+        ul.navbar-nav.text-right
+          include ./partials/welcome_new
+
+
 
 
     script(src="https://code.jquery.com/jquery-3.4.1.slim.min.js",integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n",crossorigin="anonymous")
