Fixed layout.pug navbar

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
     block extraHeader
   body
     nav#mainNav.navbar.navbar-expand-sm.bg-light.navbar-light.justify-content-end.fixed-top
-      a.mr-auto.mr-1.navbar-brand.js-scroll-trigger(href='#page-top') Inhalert
+      a.mr-auto.mr-1.navbar-brand.js-scroll-trigger(href='/dashboard') Inhalert
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent')
         span.navbar-toggler-icon
       #navbarSupportedContent.collapse.navbar-collapse.flex-grow-0
