--- a/views/partials/messages.pug
+++ b/views/partials/messages.pug
@@ -1,5 +1,5 @@
 if (typeof errors != 'undefined')
-    ul
+    ul(style={"padding-left": 0})
         each error in errors
             .alert.alert-warning.alert-dismissible.fade.show(role='alert')
                 | #{error.msg}
